Fix size and alignment of CKEditor dossier description form field.

--- a/app/assets/stylesheets/partials/content/_dossiers.sass
+++ b/app/assets/stylesheets/partials/content/_dossiers.sass
@@ -11,7 +11,7 @@
 // CKEditor
 #cke_dossier_description,
 #cke_visitor_log_content
-  float: right
+  float: left
 
 span.cke_skin_kama
   border: 0
